[project]
name = "mlflow-tut"
version = "0.1.0"
description = ""
authors = [
    {name = "nakul-krishnakumar",email = "nakulkrishnakumar86@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mlflow (>=2.22.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "mlflow_tut", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
